<resources>
    <string name="transistion_anim">sharedtransistion</string>
    <string name="app_name">Imager</string>
    <string name="action_settings">Settings</string>
    <string name="transistion_fab">reveal</string>
    <string name="wall">Set as wallpaper</string>
    <string name="download">Download image</string>
    <string name="credits">Credits of image</string>
    <string name="wallpaper">&#xf1c5;</string>
    <string name="user">&#xf007;</string>
    <string name="download_img">&#xf019;</string>
    <string name="detail_content">detail image</string>
</resources>
